1.补充剩余接口，调测可跑

--- a/config.yaml
+++ b/config.yaml
@@ -71,7 +71,7 @@ system:
   #  IP限制一个小时
   iplimit_time: 3600
   #  路由全局前缀
-  router_prefix: ""
+  router_prefix: "/api"
 
 # captcha configuration
 captcha:
